bridge/base/api-expose.yaml
#! api-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api
    namespace: telepaygate
    labels:
        com.docker.compose.project: telepaygate
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: telepaygate
        com.docker.compose.service: api
    ports:
        - name: api-3000
          port: 3000
          targetPort: api-3000
