bridge/base/api-service.yaml
# check if there is at least one published port

#! api-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-published
    namespace: telepaygate
    labels:
        com.docker.compose.project: telepaygate
        com.docker.compose.service: api
spec:
    selector:
        com.docker.compose.project: telepaygate
        com.docker.compose.service: api
    ports:
        - name: api-3000
          port: 3000
          protocol: TCP
          targetPort: api-3000

# check if there is at least one published port
