bridge/base/mailhog-expose.yaml
#! mailhog-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: mailhog
    namespace: telepaygate
    labels:
        com.docker.compose.project: telepaygate
        com.docker.compose.service: mailhog
spec:
    selector:
        com.docker.compose.project: telepaygate
        com.docker.compose.service: mailhog
    ports:
        - name: mailhog-1025
          port: 1025
          targetPort: mailhog-1025
        - name: mailhog-8025
          port: 8025
          targetPort: mailhog-8025
