bridge/base/sdk_builder-expose.yaml
#! sdk_builder-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: sdk-builder
    namespace: telepaygate
    labels:
        com.docker.compose.project: telepaygate
        com.docker.compose.service: sdk_builder
spec:
    selector:
        com.docker.compose.project: telepaygate
        com.docker.compose.service: sdk_builder
    ports:
        - name: sdk-builde-3000
          port: 3000
          targetPort: sdk-builde-3000
